--- a/src/Style.scss
+++ b/src/Style.scss
@@ -7,7 +7,8 @@ $almost-black: rgb(47, 47, 56);
 $almost-white: rgb(176, 176, 170);
 $phudu: "Phudu", sans-serif;
 $prism: "Tilt Prism", sans-serif;
-$border: 4px;
+$plex: "IBM Plex Mono", monospace;
+$border: 6px;
 $gray: rgba(255, 255, 255, 0.3);
 $shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 $strong-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
@@ -21,7 +22,7 @@ $strong-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
 }
 
 main {
-  background-image: url("/assets/backgroundBW.jpg");
+  background-image: url("/assets/black-white.jpg");
   width: 100vw;
   height: 100vh;
   background-position: center;
@@ -33,7 +34,7 @@ main {
   font-family: $phudu;
 
   .container {
-    width: 1300px;
+    width: 95vw;
     height: 95vh;
     position: relative;
     padding: 40px;
@@ -43,20 +44,20 @@ main {
       align-items: center;
       justify-content: space-between;
       margin-bottom: 20px;
+      text-align: center;
 
       .left {
         padding: 10px;
-        background-color: rgba(0, 0, 0, 0.25);
-        backdrop-filter: blur(1px);
         border-radius: 5px;
         h1 {
-          font-family: $prism;
-          font-size: 50px;
+          font-size: 80px;
           font-weight: 200;
+          letter-spacing: 2px;
+          color: $almost-black;
         }
         p.desc {
-          font-size: 14px;
-          letter-spacing: 3.1px;
+          font-size: 20px;
+          letter-spacing: 6px;
         }
       }
 
@@ -65,17 +66,18 @@ main {
         align-items: center;
         justify-content: space-between;
         gap: 50px;
+        margin-right: 53px;
 
         a {
           all: unset;
-          width: 40px;
-          height: 40px;
+          width: 60px;
+          height: 60px;
           background-size: contain;
           background-repeat: no-repeat;
           background-position: center;
           transition: 0.4s;
           position: relative;
-          filter: blur(1px);
+          filter: blur(2px);
 
           &:hover {
             transition: filter 0.4s;
@@ -98,9 +100,10 @@ main {
             opacity: 0;
             position: absolute;
             bottom: -30px;
-            left: -20px;
-            width: 80px;
+            left: -30px;
+            width: 120px;
             height: 20px;
+            font-size: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -120,13 +123,14 @@ main {
         button {
           all: unset;
           padding: 10px;
-          font-size: 30px;
+          font-size: 40px;
           letter-spacing: 1px;
           transition: 0.5s;
           display: flex;
           align-items: center;
           justify-content: space-between;
           gap: 20px;
+          filter: blur(2px);
           color: $almost-black;
 
           img {
@@ -135,10 +139,9 @@ main {
           }
 
           &:hover {
-            background-color: $gray;
-            backdrop-filter: blur(1px);
-            transition: 0.5s;
             cursor: pointer;
+            filter: blur(0);
+            transition: 0.5s;
           }
 
           &.show {
@@ -153,7 +156,7 @@ main {
           position: absolute;
           margin-top: 50px;
           height: 0;
-          width: 1220px;
+          width: 80vw;
           display: flex;
           justify-content: space-between;
           gap: 5px;
@@ -167,13 +170,13 @@ main {
             background-position: top;
             background-size: cover;
             overflow: hidden;
-            filter: grayscale(0.9) blur(0.5px);
+            filter: grayscale(0.3) blur(0.5px);
             box-shadow: $strong-shadow;
             border-radius: 5px;
 
             &:hover {
               animation: remove-overflow 2s forwards;
-              filter: grayscale(0) blur(0);
+              filter: grayscale(0.8) blur(0);
               transition: filter 0.5s;
               .card-data {
                 animation: show-data 1s forwards;
@@ -259,7 +262,7 @@ main {
           }
 
           &.show {
-            height: 300px;
+            height: 600px;
             transition: height 0.6s;
           }
         }
@@ -270,7 +273,7 @@ main {
         button {
           all: unset;
           padding: 10px;
-          font-size: 30px;
+          font-size: 40px;
           letter-spacing: 1px;
           transition: 0.5s;
           display: flex;
@@ -278,6 +281,7 @@ main {
           justify-content: space-between;
           gap: 20px;
           color: $almost-black;
+          filter: blur(2px);
 
           img {
             height: 15px;
@@ -285,10 +289,9 @@ main {
           }
 
           &:hover {
-            background-color: $gray;
-            backdrop-filter: blur(1px);
             transition: 0.5s;
             cursor: pointer;
+            filter: blur(0);
           }
 
           &.show {
@@ -304,7 +307,7 @@ main {
           right: 0;
           margin-top: 50px;
           height: 0;
-          width: 1220px;
+          width: 80vw;
           display: grid;
           grid-template-columns: 1fr 1fr 1fr 1fr;
           justify-content: space-between;
@@ -319,13 +322,13 @@ main {
             background-position: top;
             background-size: cover;
             overflow: hidden;
-            filter: grayscale(0.9) blur(0.5px);
+            filter: grayscale(0.3) blur(0.5px);
             box-shadow: $shadow;
             border-radius: 5px;
 
             &:hover {
               animation: remove-overflow 2s forwards;
-              filter: grayscale(0) blur(0);
+              filter: grayscale(0.8) blur(0);
               transition: filter 0.5s;
               .card-data {
                 animation: show-data 1s forwards;
@@ -444,7 +447,7 @@ main {
           }
 
           &.show {
-            height: 500px;
+            height: 650px;
             transition: height 0.6s;
           }
         }
@@ -476,7 +479,7 @@ main {
       width: $border;
       height: 50%;
       transform: rotate(180deg);
-      background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
+      background-image: linear-gradient($almost-white, rgba(0, 0, 0, 0));
     }
 
     .bottom-border {
@@ -486,19 +489,35 @@ main {
       height: $border;
       width: 50%;
       transform: rotate(180deg);
-      background-image: linear-gradient(to right, black, rgba(0, 0, 0, 0));
+      background-image: linear-gradient(
+        to right,
+        $almost-white,
+        rgba(0, 0, 0, 0)
+      );
     }
 
     ///contacts:
     .contact {
       position: absolute;
-      font-family: "IBM Plex Mono", monospace;
-      font-size: 14px;
+      font-family: $plex;
+      font-size: 10px;
       text-align: end;
-      background-color: $gray;
+      background-color: rgb(47, 47, 56, 0.5);
+      color: $almost-white;
       right: 25px;
       bottom: 25px;
       padding: 10px;
+      transition: 0.1s;
+      filter: blur(1px);
+
+      &:hover {
+        font-size: 20px;
+        padding: 40px;
+        line-height: 30px;
+        transition: 0.3s;
+        border-radius: 100px 100px 0 100px;
+        filter: blur(0);
+      }
     }
 
     ///theme:
@@ -511,7 +530,7 @@ main {
       letter-spacing: 3px;
       font-size: 20px;
       transition: 0.2s;
-      color: $almost-black;
+      color: $almost-white;
 
       &:hover {
         scale: 1.1;
